src/test/ui/issue-24365.stderr
error[E0609]: no field `b` on type `Foo`
  --> $DIR/issue-24365.rs:20:22
   |
LL |     println!("{}", a.b); //~ no field `b` on type `Foo`
   |                      ^

error[E0609]: no field `attr_name_idx` on type `&Attribute`
  --> $DIR/issue-24365.rs:27:18
   |
LL |     let z = (&x).attr_name_idx; //~ no field `attr_name_idx` on type `&Attribute`
   |                  ^^^^^^^^^^^^^

error[E0609]: no field `attr_name_idx` on type `Attribute`
  --> $DIR/issue-24365.rs:28:15
   |
LL |     let y = x.attr_name_idx; //~ no field `attr_name_idx` on type `Attribute`
   |               ^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0609`.
